--- a/src/style.css
+++ b/src/style.css
@@ -161,6 +161,112 @@ main#news {
           color: #fbbc05; }
         main#news .content table tr td.actions a.edit_icon {
           color: #4285f4; }
+  main#news .carousel.content .carousel-wrapper {
+    background-color: #394242;
+    min-height: 200px; }
+    main#news .carousel.content .carousel-wrapper .row {
+      margin-bottom: 0; }
+      main#news .carousel.content .carousel-wrapper .row .info-col {
+        color: #fff;
+        text-align: center; }
+        main#news .carousel.content .carousel-wrapper .row .info-col span {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          height: 160px;
+          width: 100%;
+          padding: 24px;
+          background-color: rgba(255, 255, 255, 0.87);
+          color: rgba(0, 0, 0, 0.54);
+          font-weight: bold; }
+      main#news .carousel.content .carousel-wrapper .row .carousel_list_col {
+        display: flex;
+        flex-wrap: wrap; }
+        main#news .carousel.content .carousel-wrapper .row .carousel_list_col .carousel-box {
+          width: 18%;
+          margin-left: 1%;
+          margin-right: 1%;
+          margin-bottom: 12px;
+          height: 160px; }
+          main#news .carousel.content .carousel-wrapper .row .carousel_list_col .carousel-box .image {
+            height: 150px;
+            position: relative;
+            border: 1px solid #e3e3e3; }
+            main#news .carousel.content .carousel-wrapper .row .carousel_list_col .carousel-box .image .banner {
+              width: 0;
+              height: 0;
+              border-style: solid;
+              border-width: 45px 45px 0 0;
+              border-color: #ec5d2f transparent transparent transparent; }
+              main#news .carousel.content .carousel-wrapper .row .carousel_list_col .carousel-box .image .banner .number {
+                position: absolute;
+                top: 6px;
+                left: 6px;
+                color: #fff; }
+              main#news .carousel.content .carousel-wrapper .row .carousel_list_col .carousel-box .image .banner i {
+                position: absolute;
+                top: 0;
+                right: 0;
+                color: #fff;
+                cursor: pointer; }
+          main#news .carousel.content .carousel-wrapper .row .carousel_list_col .carousel-box .carousel-headline {
+            color: #fff;
+            font-weight: bold;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            overflow: hidden; }
+  main#news .carousel.content .save-carousel {
+    margin-top: 12px;
+    margin-bottom: 12px;
+    background: #004d99;
+    font-weight: bold; }
+  main#news .carousel.content table .actions a {
+    margin: 0;
+    padding-left: 0;
+    padding-right: 0;
+    text-transform: uppercase;
+    font-weight: bold; }
+    main#news .carousel.content table .actions a.add-carousel-btn {
+      color: #004d99; }
+    main#news .carousel.content table .actions a.remove-carousel-btn {
+      color: #ec5d2f; }
+    main#news .carousel.content table .actions a:hover {
+      background-color: transparent; }
+  main#news #news-form .semi-card {
+    padding: 12px;
+    background-color: #fff;
+    box-shadow: 0 -1px 0 #e5e5e5, 0 0 1px rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.24);
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    flex-direction: column; }
+    main#news #news-form .semi-card .input-field {
+      width: 100%; }
+  main#news #news-form h4 {
+    font-weight: bold; }
+  main#news #news-form form .caret {
+    z-index: 4; }
+  main#news #news-form form h5 {
+    color: #004d99; }
+  main#news #news-form form .file-field .btn {
+    background-color: #ededed;
+    color: rgba(0, 0, 0, 0.87); }
+    main#news #news-form form .file-field .btn:hover {
+      background-color: #ededed; }
+  main#news #news-form form .file-field .file-path-wrapper {
+    padding-right: 20px;
+    padding-left: 0; }
+  main#news #news-form form input.select-dropdown {
+    border-radius: 3px;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.18), 0 1px 2px 0 rgba(0, 0, 0, 0.15);
+    padding: 0px 12px;
+    background-color: #ededed;
+    border-color: #b1b1b1;
+    border: 0;
+    text-transform: uppercase; }
+  main#news #news-form form .submit-btn,
+  main#news #news-form form .draft-btn {
+    background-color: #004d99; }
 
 #DataTables_Table_0_filter {
   display: none; }
@@ -390,60 +496,6 @@ main#add-user {
   height: 100%; }
   main#add-user .card {
     width: 600px; }
-
-main#news.carousel .content .carousel-wrapper {
-  background-color: #394242;
-  min-height: 200px; }
-  main#news.carousel .content .carousel-wrapper .row {
-    margin-bottom: 0; }
-  main#news.carousel .content .carousel-wrapper .info-col {
-    color: #fff;
-    text-align: center; }
-    main#news.carousel .content .carousel-wrapper .info-col span {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 160px;
-      width: 100%;
-      padding: 24px;
-      background-color: rgba(255, 255, 255, 0.87);
-      color: rgba(0, 0, 0, 0.54);
-      font-weight: bold; }
-  main#news.carousel .content .carousel-wrapper .carousel_list_col {
-    display: flex;
-    flex-wrap: wrap; }
-    main#news.carousel .content .carousel-wrapper .carousel_list_col .carousel-box {
-      width: 18%;
-      margin-left: 1%;
-      margin-right: 1%;
-      margin-bottom: 12px;
-      height: 160px; }
-      main#news.carousel .content .carousel-wrapper .carousel_list_col .carousel-box .image {
-        height: 150px;
-        position: relative; }
-        main#news.carousel .content .carousel-wrapper .carousel_list_col .carousel-box .image .banner {
-          width: 0;
-          height: 0;
-          border-style: solid;
-          border-width: 45px 45px 0 0;
-          border-color: #ec5d2f transparent transparent transparent; }
-          main#news.carousel .content .carousel-wrapper .carousel_list_col .carousel-box .image .banner .number {
-            position: absolute;
-            top: 6px;
-            left: 6px;
-            color: #fff; }
-          main#news.carousel .content .carousel-wrapper .carousel_list_col .carousel-box .image .banner i {
-            position: absolute;
-            top: 0;
-            right: 0;
-            color: #fff;
-            cursor: pointer; }
-      main#news.carousel .content .carousel-wrapper .carousel_list_col .carousel-box .carousel-headline {
-        color: #fff;
-        font-weight: bold;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        overflow: hidden; }
 
 main#news.carousel .content .save-carousel {
   margin-top: 12px;
